# pythonprimenumbercompute

./: 7endtotient  README.md  computeprime.py  makefile  primeinfo  pyproject.toml  setup.py  test_formulas.py
tama_prime/: __init__.py  cli.py  formulas.py  formulas2.py  optimize.py  plotting.py
