[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tama-prime"
version = "0.1.0"
description = "Tama Prime System: analytic + discrete prime modeling engine"
authors = [
    { name = "Maximillian" }
]
dependencies = [
    "sympy",
    "matplotlib"
]

[project.scripts]
tama-prime = "tama_prime.cli:main"
